# hyprtab

./: CMakeLists.txt  README.md  hyprpm.toml
src/: main.cpp
